Fix bug 225565 by looking at the actual control type.  r+sr=peterv